--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,42 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "This is the backend for the pro planet application",
+  "description": "This is the backend for trithon application",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "Trithon"
+    "build": "cd src && npx tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon",
+    "vercel-build": "echo hello"
   },
   "keywords": [
+    "codex",
     "hackathon",
-    "proplanet"
+    "trithon",
+    "server"
   ],
   "author": "Saket Aryan",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/md5": "^2.3.5",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "mongoose": "^8.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/cors": "^2.8.16",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.14.201",
+    "nodemon": "^3.0.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
