--- a/pro_demo/pubspec.yaml
+++ b/pro_demo/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   camera: ^0.10.5+5
   fl_chart: ^0.64.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
