--- a/pro_demo/pubspec.yaml
+++ b/pro_demo/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   assets:
     - assets/
     - assets/images/loginimage.png
+    - assets/images/user.jpeg
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
