--- a/pro_demo/pubspec.yaml
+++ b/pro_demo/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   camera: ^0.10.5+5
   fl_chart: ^0.64.0
   provider: ^6.1.1
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,9 @@ flutter:
     - assets/
     - assets/images/loginimage.png
     - assets/images/user.jpeg
+    - assets/images/globe_green.svg
+    - assets/images/globe_yellow.svg
+    - assets/images/globe_red.svg
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
