--- a/pro_demo/pubspec.yaml
+++ b/pro_demo/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fl_chart: ^0.64.0
   provider: ^6.1.1
   flutter_svg: ^2.0.9
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
