--- a/pro_demo/pubspec.yaml
+++ b/pro_demo/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.1
   flutter_svg: ^2.0.9
   http: ^1.1.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
