--- a/pro_demo/pubspec.yaml
+++ b/pro_demo/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    
     - assets/images/loginimage.png
     - assets/images/signupimage.png
     - assets/images/leaderboard.png
@@ -72,6 +72,11 @@ flutter:
     - assets/images/globe_green.svg
     - assets/images/globe_red.svg
     - assets/images/globe_yellow.svg
+    - assets/images/save_water.jpg
+    - assets/images/clean_city.jpg
+    - assets/images/no_plastic.jpg
+    - assets/images/clean_river.jpg
+
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
