--- a/pro_demo/pubspec.yaml
+++ b/pro_demo/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   fl_chart: ^0.64.0
   provider: ^6.1.1
   flutter_svg: ^2.0.9
+  permission_handler: ^11.0.1
+  flutter_sms_inbox: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +64,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    
     - assets/images/loginimage.png
     - assets/images/signupimage.png
     - assets/images/leaderboard.png
