--- a/pro_demo/pubspec.yaml
+++ b/pro_demo/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_sms_inbox: ^1.0.3
   shared_preferences: ^2.2.2
   http: ^1.1.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +57,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 # The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
