--- a/pro_demo/pubspec.yaml
+++ b/pro_demo/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.1.0
   flutter_launcher_icons: ^0.13.1
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
